Closed Bug 241876 Opened 21 years ago Closed 21 years ago

nsIDHashKey does not define a KeyEquals method

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

Attachments

(1 file)

nsIDHashKey does not define a KeyEquals method. It seems to have operator==, but all the other hash keys define KeyEquals. The following code doesn't compile: struct nsFoo { ... }; nsClassHashtable<nsIDHashKey, nsFoo> table; table.Init(); The compiler complains about a missing KeyEquals method.
Attached patch v1 patchSplinter Review
Attachment #147147 - Flags: superreview?(bsmedberg)
Attachment #147147 - Flags: review?(bsmedberg)
Comment on attachment 147147 [details] [diff] [review] v1 patch Oops... that's what I get for checking in code that isn't actually used.
Attachment #147147 - Flags: superreview?(bsmedberg)
Attachment #147147 - Flags: superreview+
Attachment #147147 - Flags: review?(bsmedberg)
Attachment #147147 - Flags: review+
fixed-on-trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: