fixes bug 241876 "nsIDHashKey does not define a KeyEquals method" r+sr=bsmedberg